worked on changes

--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -241,7 +241,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
@@ -289,7 +289,7 @@
                     <p class=" head_imp fontGraphikSemibold " style="margin-top: 20px;">Tips to decrease Burn Rate</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         Try to merge or retire activities that require more money to be run.</a></li><br />
-<li style="color:#665CD7"><a style="color:#7B6A77">                            <li style="color:#665CD7"><a style="color:#7B6A77">Look for free alternatives for any of the tools you use to work/sell.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Look for free alternatives for any of the tools you use to work/sell.</a></li><br />
                                 <li style="color:#665CD7"><a style="color:#7B6A77">Try to bring in more qualified leads to compensate for the burn rate.</a></li><br />
                                     <li style="color:#665CD7"><a style="color:#7B6A77">Alternatively, considering bootstrapping or raising funds.</a></li><br />
                     </p>
