--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -241,7 +241,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
