worked on responsive issue

--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -271,9 +271,9 @@
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         The metric that lets you measure customer satisfaction and loyalty. It puts them into three
                         types:
-                        <li style="color:#665CD7"><a style="color:#7B6A77">  passive </a></li>
-                            <li style="color:#665CD7"><a style="color:#7B6A77">  detractors</a></li>
-                                <li style="color:#665CD7"><a style="color:#7B6A77">  promoters. </a></li>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Passive </a></li>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Detractors</a></li>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  Promoters </a></li>
 
 
 
@@ -305,7 +305,7 @@
                             </p>
                         </div>
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerlifetime.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customer-lifetime-value.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
