--- a/saas-metrics/customer-acqisation-cost.html
+++ b/saas-metrics/customer-acqisation-cost.html
@@ -298,7 +298,7 @@
                         <li style="color:#665CD7"><a style="color:#7B6A77"> Ultimately, CAC helps  where your marketing/sales strategies are effective or not.</a></li>
                         <br />
                         </p>
-                        <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerretention.html'">
+                        <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customer-retention-rate.html'">
                             <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                               <div class="row" style="border-left: 3px solid #665CD7;">
                                   <div class="col-10">
