--- a/saas-metrics/customer-lifetime-value.html
+++ b/saas-metrics/customer-lifetime-value.html
@@ -303,7 +303,7 @@
                         operations.</a></li>
 
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='averagerevenue.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='average-revenue-per-account.html'">
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
