--- a/saas-metrics/monthly-recurring-revenue.html
+++ b/saas-metrics/monthly-recurring-revenue.html
@@ -320,7 +320,7 @@
                                 <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers that can interest more users into buying your product </a></li><br />
                                     <li style="color:#665CD7"><a style="color:#7B6A77"> Consider decreasing your burn rate</a></li>
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='revenuechurn.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='revenue-churn.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-9">
