--- a/saas-metrics/average-resolution-time.html
+++ b/saas-metrics/average-resolution-time.html
@@ -316,7 +316,7 @@
 
 
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerchurn.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customer-churn.html'">
                         <div class=" col-5 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
