--- a/saas-metrics/average-revenue-per-account.html
+++ b/saas-metrics/average-revenue-per-account.html
@@ -303,7 +303,7 @@
 
 
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='leadvelocity.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='lead-velocity-rate.html'">
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-9">
