--- a/saas-metrics/customer-churn.html
+++ b/saas-metrics/customer-churn.html
@@ -317,7 +317,7 @@
                             <li style="color:#665CD7"><a style="color:#7B6A77">Open up multiple avenues for user feedback.</a></li><br/>
                                 <li style="color:#665CD7"><a style="color:#7B6A77">Constantly fix issues in your product.</a></li></p>
 
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='annualrecurring.html'" >
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='annual-recurring-revenue.html'" >
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
