--- a/saas-metrics/lead-velocity-rate.html
+++ b/saas-metrics/lead-velocity-rate.html
@@ -312,7 +312,7 @@
 
 
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='monthlyrecurring.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='monthly-recurring-revenue.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-9">
