worked on updates

--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -311,7 +311,7 @@
 
 
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='avreageresolution.html'">
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='average-resolution-time.html'">
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
