--- a/saas-metrics.html
+++ b/saas-metrics.html
@@ -178,7 +178,7 @@
     <div class="container" style="margin-top:100px;">
         <div class="row">
             <div class=" title col-12">
-                <h1>Saas Metrics 101</h1>
+                <h1>SaaS Metrics 101</h1>
                 <div class="dotted_line"><img  class="dotted_line"src="images/line-2.png" alt="" ></div>
             </div>
         </div>
