--- a/saas-metrics/product-qualified-leads.html
+++ b/saas-metrics/product-qualified-leads.html
@@ -311,7 +311,7 @@
                             <li style="color:#665CD7"><a style="color:#7B6A77">  This makes them a better metric than sales/marketing qualified leads, as the conversion rate is
                         higher and much more predictable. </a></li><br/>
                     </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customeracqisationcost.html'" >
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customer-acqisation-cost.html'" >
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
