worked on  alignment

--- a/saas-metrics/average-resolution-time.html
+++ b/saas-metrics/average-resolution-time.html
@@ -320,7 +320,8 @@
                         <div class=" col-5 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
-                              <b style="padding-left:8px;">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b> <b style="padding-left:8px;"> Churn</b>
+                              <b style="padding-left:4px;">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                              <br/>   Churn</b>
                      </div>
                       
                           <div class="col-2"style="top:10px;padding:0px">
