worked on issues

--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -274,7 +274,7 @@
                     <p class=" head_ques fontGraphikSemibold "> Why Net Burn Rate is important?</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         <li style="color:#665CD7"><a style="color:#7B6A77">Shows whether your current revenue is substantial enough.</a> </li><br />
-                       hShows how long you can sail before you run out of money.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Shows how long you can sail before you run out of money.</a></li><br />
 
                     </p>
                     <p class=" head_ques fontGraphikSemibold "> To calculate Net Burn Rate
