--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -281,9 +281,9 @@
                     <p class=" head_imp fontGraphikSemibold ">Why is it important?
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">  Shows how well a customer would recommend your product </a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77">  0 means they’d never</a></li> <br/>
-                                <li style="color:#665CD7"><a style="color:#7B6A77">  10 means they’re very likely </a></li> <br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Shows how well a customer would recommend your product.</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  0 means they’d never.</a></li> <br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  10 means they’re very likely.</a></li> <br/>
                                     <li style="color:#665CD7"><a style="color:#7B6A77"> Overall, the higher your NPS, the more satisfied the customer is.</a></li><br />
 
 
