--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -301,8 +301,8 @@
                             </p>
                         </div>
                       <br/>
-                      <li style="color:#665CD7"><a style="color:#7B6A77">  P.S. Revenue is the total money earned whereas Profits are the surplus after subtracting
-                        business expenses.</a></li><br/>
+                     <a style="color:#7B6A77">  P.S. Revenue is the total money earned whereas Profits are the surplus after subtracting
+                        business expenses.</a><br/>
 
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='product-qualified-leads.html'">
