--- a/saas-metrics/customer-acqisation-cost.html
+++ b/saas-metrics/customer-acqisation-cost.html
@@ -291,9 +291,9 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">Customer acquisition is a long,tedious process of an organization. But
-                        slowly.</a></li><br/>
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Under a good acquisition strategy, word spreads  and more leads come at your door.</a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Customer acquisition is a long,tedious process of an organization. </a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> But
+                            slowly,Under a good acquisition strategy, word spreads  and more leads come at your door.</a></li><br/>
 
                         <li style="color:#665CD7"><a style="color:#7B6A77"> Ultimately, CAC helps  where your marketing/sales strategies are effective or not.</a></li>
                         <br />
