--- a/saas-metrics/customer-churn.html
+++ b/saas-metrics/customer-churn.html
@@ -269,7 +269,7 @@
 
                 </p>
                 <p class="p fontLatoRegular" style="color:#7B6A77">
-                    The percentage of customers that have not paid for your product during a certain time frame
+                    The percentage of customers that have not paid for your product during a certain time frame.
 
 
                 </p>
