--- a/saas-metrics/customer-engagement-score.html
+++ b/saas-metrics/customer-engagement-score.html
@@ -277,13 +277,13 @@
                         .</p>
                     <p class=" head_imp fontGraphikSemibold ">How to calculate Customer Engagement Score?</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Identify the events to track, that would count as ‘engagement’</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Identify the events to track, that would count as ‘engagement’.</a></li><br />
                         <li style="color:#665CD7"><a style="color:#7B6A77">Label metrics that can help you identify if a user has completed a task, dropped out, and has
                         come back for an encore.</a></li>
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                     A simpler method:<br />
-                    <li style="color:#665CD7"><a style="color:#7B6A77">Label every event</a></li><br />
+                    <li style="color:#665CD7"><a style="color:#7B6A77">Label every event.</a></li><br />
                     <li style="color:#665CD7"><a style="color:#7B6A77"> Measure the usage frequency of these, for a single user.</a></li><br />
                     <li style="color:#665CD7"><a style="color:#7B6A77"> Multiple the average frequency with the number of events.</a></li><br />
                     <li style="color:#665CD7"><a style="color:#7B6A77"> Compare this score with scores of other users.</a></li><br />
