--- a/saas-metrics/customer-retention-rate.html
+++ b/saas-metrics/customer-retention-rate.html
@@ -118,7 +118,7 @@
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
                                 <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
-                                10px;margin-left:10px !important;">Saas Metrics </a>
+                                10px;margin-left:10px !important;">SaaS Metrics </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -281,7 +281,7 @@
                     <p class=" head_imp fontGraphikSemibold " style="margin-bottom: 0px;"> Important of CRR</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         <li style="color:#665CD7"><a style="color:#7B6A77" >Customer Retention Rate informs businesses about they are truly growing or not.</a></li><br/>
-                            <li style="color:#665CD7"> <a style="color:#7B6A77" >Growth = more customers stay while you continue to add more.</a></li> </p>
+                            <li style="color:#665CD7"> <a style="color:#7B6A77" >Growth = More customers stay while you continue to add more.</a></li> </p>
                     <p class=" head_imp fontGraphikSemibold"  style="margin-bottom: 0px;">Tips to increase Customer Retention Rate</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         <li style="color:#665CD7"><a style="color:#7B6A77" >Make it a point to deliver more than you what the user expects.</a></li><br />
