--- a/saas-metrics/lead-velocity-rate.html
+++ b/saas-metrics/lead-velocity-rate.html
@@ -289,10 +289,10 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the number of qualified leads for the current month (M1)</a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Subtract last month’s number from that(M2)</a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide the result with the last month’s number </a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100 </a></li> <br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the number of qualified leads for the current month (M1).</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Subtract last month’s number from that(M2).</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide the result with the last month’s number. </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100. </a></li> <br />
 
                             <div class="for_div1">
                                 <p class="formula">  LVR = (M1 ⁠— M2) / M2*100 
@@ -306,9 +306,9 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Be proactive and have sales team work and save up leads before any seasonal dips </a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Bring in a loyalty program and have existing customers recommend your product </a></li><br />
-                                <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers to entice other, under-budget users </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Be proactive and have sales team work and save up leads before any seasonal dips. </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Bring in a loyalty program and have existing customers recommend your product. </a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers to entice other, under-budget users. </a></li><br />
 
 
                     </p>
