--- a/saas-metrics/product-qualified-leads.html
+++ b/saas-metrics/product-qualified-leads.html
@@ -295,7 +295,9 @@
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         <li style="color:#665CD7"><a style="color:#7B6A77">  Nudges at the right time can motivate them to start paying.</a></li> <br/>
 
-                          <li style="color:#665CD7"><a style="color:#7B6A77"> These include:</a>  </li><br/>
+                         <a style="color:#7B6A77"> <b>These include:</b></a>
+                         <br/>
+                         <br/>
                         <li style="color:#665CD7"><a style="color:#7B6A77">  Let them know that paid customers have no limits. </a></li><br/>
                             <li style="color:#665CD7"><a style="color:#7B6A77">   Track their features’ usage & send them badges.</a></li><br/>
                                 <li style="color:#665CD7"><a style="color:#7B6A77">   Highlight the differences of certain features when paid.</a></li><br/>
