--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -277,17 +277,17 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">Helps track churn rate between high and low spenders</a></li><br />
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Helps identify which pricing plan/ customer segment is more valuable </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Helps track churn rate between high and low spenders.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Helps identify which pricing plan/ customer segment is more valuable.</a></li><br />
 
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">How to calculate Revenue Churn Rate?
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the revenue lost over a period (month/quarter/year) </a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide it with the revenue in the beginning of this period</a></li><br />
-                                <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100 </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the revenue lost over a period (month/quarter/year).</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide it with the revenue in the beginning of this period.</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100.</a></li><br />
                                 <div class="for_div1"style="width:auto !important ; ">
                                     <p class="formula"> Revenue Churn Rate = Lost Revenue at the end of a period / Revenue in the beginning.
             
