--- a/saas-metrics/monthly-recurring-revenue.html
+++ b/saas-metrics/monthly-recurring-revenue.html
@@ -277,10 +277,10 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77"> To forecast finances </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> To forecast finances.</a></li><br />
                             <li style="color:#665CD7"><a style="color:#7B6A77"> MRR is essentially a stable metric thanks to subscription models, making financial projections
                         more accurate. </a></li><br />
-                        <li style="color:#665CD7"><a style="color:#7B6A77">To measure growth</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">To measure growth.</a></li><br />
                             <li style="color:#665CD7"><a style="color:#7B6A77"> A month-on-month increase of your MRR is a clear indicator of a thriving business. </a></li><br />
                                 <li style="color:#665CD7"><a style="color:#7B6A77"> A declining MRR is a direct signal for employing better strategies. </a></li><br />
 
@@ -304,9 +304,9 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">New MRR ⁠— the MRR given by new customers </a> </li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">New MRR ⁠— the MRR given by new customers. </a> </li><br />
                             <li style="color:#665CD7"><a style="color:#7B6A77"> Add-on MRR ⁠— the MRR given by existing customers, by buying additional features.</a></li><br />
-                                <li style="color:#665CD7"><a style="color:#7B6A77">Churn MRR — MRR lost from cancellations and downgrades </a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77">Churn MRR — MRR lost from cancellations and downgrades. </a></li><br />
 
 
 
@@ -315,10 +315,10 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">Have your sales team close more qualified leads</a> </li> <br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77"> Have variable pricing schemes and charge users based on their engagement levels </a></li><br />
-                                <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers that can interest more users into buying your product </a></li><br />
-                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Consider decreasing your burn rate</a></li>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Have your sales team close more qualified leads.</a> </li> <br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Have variable pricing schemes and charge users based on their engagement levels. </a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers that can interest more users into buying your product. </a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Consider decreasing your burn rate.</a></li>
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='revenue-churn.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
