--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -308,8 +308,8 @@
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customer-lifetime-value.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
-                              <div class="col-10">
-                              <b style="padding-left:4px;">Customer Lifetime </b> <b style="padding-left:4px;">  Value</b>
+                              <div class=" col-10">
+                              <b  class="net"style="padding-left:4px;">Customer Lifetime </b> <b style="padding-left:4px;">  Value</b>
                      </div>
                       
                           <div class="col-2"style="top:10px;padding:0px">
