--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -309,7 +309,7 @@
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
-                              <b style="padding-left:4px;">Product &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b> <b style="padding-left:4px;">Qualified Leads</b>
+                              <b   class="net"style="padding-left:4px;">Product &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b> <b style="padding-left:4px;">Qualified Leads</b>
                      </div>
                       
                           <div class="col-2"style="top:10px;padding:0px">
