--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -297,7 +297,7 @@
                   <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                     <div class="row" style="border-left: 3px solid #665CD7;">
                         <div class="col-10">
-                        <b style="padding-left:4px;">Customer Engagement</b> <b style="padding-left:4px;"> score</b>
+                        <b  class="net" style="padding-left:4px;">Customer Engagement</b> <b style="padding-left:4px;"> score</b>
                </div>
                 
                     <div class="col-2"style="top:10px;padding:0px">
