--- a/who-we-are.html
+++ b/who-we-are.html
@@ -20,7 +20,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
     
-    <title>About Crayon'd | Our Team & The Story Behind Crayond</title> 
+    <title>About Crayon'd | Our Story | Vision & Mission | Culture</title> 
     <meta name="description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
     <link rel="canonical" href="https://www.crayond.com/who-we-are"/>
 
@@ -28,15 +28,15 @@
     <meta property="og:type" content="website" /> 
     <meta property="og:site_name" content="CRAYOND" /> 
     <meta property="og:url" content="https://www.crayond.com/who-we-are"> 
-    <meta property="og:title" content="About Crayon'd | Our Team & The Story Behind Crayond" /> 
-    <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
+    <meta property="og:title" content="About Crayon'd | Our Story | Vision & Mission | Culture" /> 
+    <meta property="og:description" content="We are a passionate team who believe in dreams. We pour our heart and soul in the art of building digital products that create a lasting impact." /> 
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
 
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="About Crayon'd | Our Team & The Story Behind Crayond">
-    <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
+    <meta name="twitter:title" content="About Crayon'd | Our Story | Vision & Mission | Culture">
+    <meta name="twitter:description" content="We are a passionate team who believe in dreams. We pour our heart and soul in the art of building digital products that create a lasting impact.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
     <!-- favicon -->
