--- a/Locuscare.html
+++ b/Locuscare.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"style="overflow:hidden">
 
 <head>
     <!-- Google Tag Manager -->
@@ -491,14 +491,14 @@
             </div>
         </div>
 
-        <div class="container-fluid mobile_launch" style="background: #2B2756;height: 560px;margin-top:8%;display:none; margin-top:60px">
+        <div class="container-fluid mobile_launch" style="background: #2B2756;height: 500px;display:none;margin-top:130px !important">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="width:100%;">
                     <img src="images/Locuscare Assessts/Group 5202.png"
-                        style="width:100% !important;position:relative;bottom:100px">
+                        style="width:100% !important;position:relative;bottom:0px;top:-110px">
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"
-                    style="margin-top:0%;padding: 5% 2% 5% 10%;">
+                    style="margin-top:0%;padding: 5% 2% 5% 10%;top:-25%">
                     <div class="  row about_head">
                         <div class=" col-12">
                             <a class="title" style="color:#FFFFFF">Launch</a>
@@ -520,7 +520,7 @@
             </div>
         </div>
 
-        <div class="container" style="margin-top: 6%;">
+        <div class="container quick" style="margin-top: 6%;">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="row">
@@ -529,7 +529,7 @@
                         </div>
 
 
-                        <div class="col-12" style="text-align:left;margin-top:2%">
+                        <div class="col-12 " style="text-align:left;margin-top:2%">
                             <a class="achieved_title">What we achieved</a>
                         </div>
                         <div class="col-12" style="text-align:left;">
@@ -539,7 +539,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="margin-top:6%">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="margin-top:6%;width:100%">
                         <img src="images/Locuscare Assessts/newpatient edited.svg" style="width:100%">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -561,7 +561,7 @@
 
 
         <div class="container">
-            <div class="container"
+            <div class="container dashboard"
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;height: 650px;">
                 <div class="  row about_head3">
                     <div class=" col-12" style="text-align: center;">
@@ -572,17 +572,17 @@
                         <p class="para" style="text-align: center !important;">A highly personalized and customizable
                             dashboard to visualize data points.</p>
                     </div>
-                    <div class=" col-12" style="text-align: center;position:relative;bottom:24px">
+                    <div class=" col-12 img_dashboard" style="text-align: center;position:relative;bottom:24px">
                         <img src="images/Locuscare Assessts/reception admin.png" style="width:100%">
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container" style="margin-top: 6%;">
+        <div class="container notification" style="margin-top: 6%;">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="row" style="margin-top: 25%;">
+                    <div class="row notification1" style="margin-top: 25%;">
                         <div class="col-12" style="text-align:left;">
                             <a class="family_title">Notifications</a>
                         </div>
@@ -593,7 +593,7 @@
                         </div>
                     </div>
 
-                    <div>
+                    <div class="curved_dottedline">
                         <img src="images/Locuscare Assessts/curved arrow.svg" style="float:right;margin-top:70px">
                     </div>
                 </div>
@@ -608,7 +608,7 @@
 
 
         <div class="container" style="margin-top:30px">
-            <div class="container"
+            <div class="container qr"
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;height: 700px;">
                 <div class="  row about_head3">
                     <div class=" col-12" style="text-align: center;">
@@ -661,14 +661,14 @@
 
 
         <div class="container">
-            <div class="container"
+            <div class="container result_container"
                 style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;background-image: url('images/locuscare Assessts/result_rightbottom.svg');background-position: 100% 100%; background-repeat:no-repeat;top:30px;">
                 <div class="  row about_head1">
                     <div class=" col-12">
                         <a class="title">Result</a>
-                        <span style="float:right;position: relative;
+                        <span class="resulttop" style="float:right;position: relative;
                     bottom: 35px;
-                "><img src="images/Locuscare Assessts/greendot.svg"></span>
+                "><img  class="greendot"src="images/Locuscare Assessts/greendot.svg"></span>
                     </div>
                 </div>
                 <div class="  row head_details2">
