worked with full responsive

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -484,7 +484,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-7" style="width:100%">
-                    <img src="images/Locuscare Assessts/reception admin edited.png"
+                    <img  class="recep_1"src="images/Locuscare Assessts/reception admin edited.png"
                         style="width:112%;position:relative;bottom: 130px;">
                 </div>
 
