--- a/Locuscare.html
+++ b/Locuscare.html
@@ -187,7 +187,8 @@
             <div class=" col-xs-12 col-ms-12 col-md-4 col-lg-3 col-xl-2  ">
                 <div class="row">
                     <div class="  col-sm-6 col-xs-6 col-md-3 col-lg-3 col-xl-3 ">
-                        <span class=" icon_1">
+                        <span class=" icon_1"style="box-shadow: 1px 2px 0px #222C5D1A;
+                        border: 1px solid #222C5D1A;">
                             <img alt="" src="./images/Locuscare Assessts/boysvg.svg" style="width: 22px;
                 margin: auto;">
                         </span>
@@ -203,7 +204,8 @@
             <div class="col-xs-12 col-ms-12 col-md-4 col-lg-3 col-xl-2  ">
                 <div class="row">
                     <div class=" col-sm-2 col-xs-2 col-md-3 col-lg-3 col-xl-3  ">
-                        <span class=" fa_icon Oval_pro">
+                        <span class=" fa_icon Oval_pro" style="box-shadow: 1px 2px 0px #222C5D1A;
+                        border: 1px solid #222C5D1A;">
                             <img alt="" src="./images/Locuscare Assessts/boxsvg.svg" style=" width: 22px;
                 margin: auto;">
                         </span>
@@ -219,7 +221,8 @@
             <div class="col-xs-12 col-ms-12 col-md-4 col-lg-3 col-xl-2 ">
                 <div class="row">
                     <div class=" col-sm-2 col-xs-2 col-md-2 col-lg-2 col-xl-2  ">
-                        <span class=" fa_icon Oval_pro ">
+                        <span class=" fa_icon Oval_pro "style="box-shadow: 1px 2px 0px #222C5D1A;
+                        border: 1px solid #222C5D1A;">
                             <img alt="" src="./images/Locuscare Assessts/filesvg.svg" style=" width: 22px;
                 margin: auto;">
                         </span>
