--- a/products.html
+++ b/products.html
@@ -124,6 +124,8 @@ input:focus:invalid {
                                    
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
+                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                10px;margin-left:10px !important;">Saas Metrics </a>
                                </div>
                            </span>
                            <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -160,6 +162,7 @@ input:focus:invalid {
                </li>
                <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
+               <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
                
                <li class="menu-item"><a href="./contact">Contact</a>
                </li>
