--- a/saas-metrics.html
+++ b/saas-metrics.html
@@ -16,7 +16,7 @@
     </script>
     <!-- End Google Tag Manager → -->
 
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">7 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Crayon'd">
@@ -660,7 +660,7 @@
                 </div>
                 <div class=" mobiletab col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="position: relative;bottom:0px">
                     
-                    <div class="row card_inside" id="card15" onclick ="window.location.href='saas-metrics/customer-acquisition-cost.html'" >
+                    <div class="row card_inside" id="card15" onclick ="window.location.href='saas-metrics/customer-acqisation-cost.html'" >
                         <div class="col-12"> <p class="head_title">Customer Acquisition Cost <a class="a_detail">(CAC)</a></p></div>
                         <div class="col-8">
                            
@@ -681,7 +681,7 @@
                     <div class="row card_inside" id="card15" onclick ="window.location.href='saas-metrics/customer-acquisition-cost.html'" >
                         <div class="col-8">
                             <p class="head_title">Customer Acquisition Cost <a class="a_detail">(CAC)</a></p>
-                            <p class=" read_article15"><a  href="saas-metrics/customer-acquisition-cost.html"style="color:white;">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
+                            <p class=" read_article15"><a  href="saas-metrics/customer-acqisation-cost.html"style="color:white;">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
                                     aria-hidden="true" class="fafaicons"></i></a></p>
                         </div>
                         <div class="col-4">
