--- a/who-we-are.html
+++ b/who-we-are.html
@@ -117,6 +117,8 @@
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
+                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -153,7 +155,7 @@
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
-            
+            <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
             <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
