worked with GDPR links

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -713,7 +713,7 @@
 
         <div class="container">
             <div class="container result_container"
-                style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;background-image: url('images/locuscare Assessts/result_rightbottom.svg');background-position: 100% 100%; background-repeat:no-repeat;top:30px;">
+                style="background: #2B2756;padding:30px 70px 30px 70px;border-radius:40px;width:100%;margin-left:0px;background-image: url('images/locuscare Assessts/result_rightbottom.svg');background-position:100%; background-repeat:no-repeat;top:30px;">
                 <div class="  row about_head1">
                     <div class=" col-12">
                         <a class="title">Result</a>
@@ -918,13 +918,13 @@
                 <div class="container">
                     <div class="row response-xs" style="display: none;">
                         <div class="privacy col-sm-6 col-xs-6">
-                            <a href="/privacy" style="color: #43434b;" class="pri1">
+                            <a href="/privacy.html" style="color: #43434b;" class="pri1">
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">
                                     Privacy</p>
                             </a>
                         </div>
                         <div class="gdpr col-sm-6 col-xs-6">
-                            <a href="/gdpr" style="color: #43434b;" class="pri">
+                            <a href="/GDPR.html" style="color: #43434b;" class="pri">
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">
                                     GDPR
                                 </p>
