--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1195,12 +1195,12 @@
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="/privacy" style="color: #43434b;" class="pri1" >
+                    <a href="/privacy.html" style="color: #43434b;" class="pri1" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="/gdpr" style="color: #43434b;" class="pri" >
+                    <a href="/GDPR.html" style="color: #43434b;" class="pri" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
