worked on changes in locuscare page

--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -501,7 +501,7 @@
                         </a>
                     </div>
                     <div class="gdpr col-sm-6 col-xs-6">
-                        <a href="/GDPR.html" style="color: #43434b;" class="pri1">
+                        <a href="/gdpr.html" style="color: #43434b;" class="pri1">
                             <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR
                             </p>
                         </a>
