--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -454,7 +454,7 @@
                                 </a>
                             </div>
                             <div class="gdpr col-xs-6">
-                                <a href="/GDPR.html" style="color: #43434b;" class="pri1">
+                                <a href="/gdpr.html" style="color: #43434b;" class="pri1">
                                     <p class="fontGraphikRegular"
                                         style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                                 </a>
