--- a/glossary.html
+++ b/glossary.html
@@ -355,7 +355,7 @@
             
         </div>
         </div>
-        <div class="container " >
+        <div class="container" >
             <div class="row response-xs" style="display: none;">
             <div class="privacy col-sm-6 col-xs-6">
                 <a href="/privacy.html" style="color: #43434b;" class="pri">
@@ -363,7 +363,7 @@
                 </a>
             </div>
             <div class="gdpr col-sm-6 col-xs-6">
-                <a href="/GDPR.html" style="color: #43434b;" class="pri1">
+                <a href="/gdpr.html" style="color: #43434b;" class="pri1">
                     <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                 </a>
             </div>
