--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                             </a>
                         </div>
                         <div class="gdpr col-sm-6 col-xs-6">
-                            <a href="/GDPR.html" style="color: #43434b;" class="pri" >
+                            <a href="/gdpr.html" style="color: #43434b;" class="pri" >
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                             </a>
                         </div>
