--- a/saas-metrics.html
+++ b/saas-metrics.html
@@ -846,7 +846,7 @@
                                 </a>
                             </div>
                             <div class="gdpr col-xs-6">
-                                <a href="/GDPR.html" style="color: #43434b;" class="pri">
+                                <a href="/gdpr.html" style="color: #43434b;" class="pri">
                                     <p class="fontGraphikRegular"
                                         style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                                 </a>
