worked on changes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index.html" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
