--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -16,7 +16,7 @@
     </script>
     <!-- End Google Tag Manager → -->
 
-    <meta charset="UTF-8">7 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Crayon'd">
@@ -52,7 +52,8 @@
     <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
 
     <!-- custom css and responsive css-->
-    <link rel='stylesheet' href='./styles/styles.css'>
+    <link rel='stylesheet' href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/Saas_metric/Saas_metric.css">
 
     <!-- font-awesome icons -->
     <link rel="stylesheet" href="plugin/css/font-awesome.css">
@@ -64,7 +65,7 @@
     <link href="./plugin/aos.css" rel="stylesheet">
 
     <!-- css  -->
-    <link rel="stylesheet" href="/styles/Saas_metric/Saas_metric.css">
+    
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
