worked on . and /

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -101,10 +101,10 @@
                                 src="./images/logo-crayond@2x.jpg" />&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                        <span><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                        <span><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular"
-                                href="/products">Products</a>
+                                href="./products">Products</a>
                             <tag>NEW</tag>
                         </span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
@@ -213,7 +213,7 @@
                     <div class=" col-sm-10 col-xs-10 col-md-9 col-lg-9 sub2 " style="padding-left:10%">
                         <dl class="sub_heads">
                             <dd class="ddhead">Products</dd>
-                            <dt class="dtsub">Locuscare</dt>
+                            <dt class="dtsub"> Locuscare</dt>
                         </dl>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
     <div class="container " style="margin-top:100px;">
         <div class="approach_whole">
 
-            <div class="row approach" style="">
+            <div class="row approach">
                 <div class=" col-12">
                     <a class="title"> Our Approach</a>
                 </div>
@@ -310,10 +310,10 @@
                 <div class="col-3" style="text-align: center;">
                     <div class="row">
                         <div class="col-10" style="width:100%">
-                            <img src="images/Locuscare Assessts/planning.svg" style="width:100%">
+                            <img src="/images/Locuscare Assessts/planning.svg" style="width:100%">
                         </div>
                         <div class="col-2">
-                            <img src="images/Locuscare Assessts/arrow straight.svg" style="    position: relative;
+                            <img src="/images/Locuscare Assessts/arrow straight.svg" style="    position: relative;
                         right: 32px;
                         top: 76px;">
                         </div>
