--- a/who-we-are.html
+++ b/who-we-are.html
@@ -117,7 +117,7 @@
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
@@ -1038,7 +1038,7 @@
                     
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                    <a href="/who-we-are"  alt="Company" style="color: unset;">
+                    <a href="./who-we-are"  alt="Company" style="color: unset;">
                         <span class="fontLatoBold footer_menu">
                                 Who&nbsp;We&nbsp;Are
                         </span>
@@ -1051,7 +1051,7 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                    <a href="/ourapproach"  alt="Company" style="color: unset;">
+                    <a href="./ourapproach"  alt="Company" style="color: unset;">
                         <span class="fontLatoBold footer_menu">
                                Our&nbsp;Approach
                         </span>
@@ -1064,7 +1064,7 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                    <a href="/opportunities"  alt="Opportunities" style="color: unset;">
+                    <a href="./opportunities"  alt="Opportunities" style="color: unset;">
                      <span class="fontLatoBold  footer_menu">
                             Opportunities
                      </span>
@@ -1089,7 +1089,7 @@
                     </ul> -->
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                    <a href="/contact"  alt="contact" style="color: unset;">
+                    <a href="./contact"  alt="contact" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
                             Contact
                     </span>
@@ -1142,12 +1142,12 @@
                     >
                     <div class="col-lg-5  col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                         <div class="privacy col-xs-6">
-                            <a href="/privacy" style="color: #43434b;" class="pri">
+                            <a href="./privacy" style="color: #43434b;" class="pri">
                                 <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                             </a>
                         </div>
                         <div class="gdpr col-xs-6">
-                            <a href="/gdpr" style="color: #43434b;" class="pri" >
+                            <a href="./gdpr" style="color: #43434b;" class="pri" >
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                             </a>
                         </div>
@@ -1195,12 +1195,12 @@
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="/privacy.html" style="color: #43434b;" class="pri1" >
+                    <a href="./privacy.html" style="color: #43434b;" class="pri1" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="/gdpr.html" style="color: #43434b;" class="pri" >
+                    <a href="./gdpr.html" style="color: #43434b;" class="pri" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
