--- a/GDPR.html
+++ b/GDPR.html
@@ -92,8 +92,8 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                        <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
@@ -561,7 +561,7 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
                         <p class="fontGraphikRegular">All rights reserved</p>
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/who-we-are"  alt="Company" style="color: unset;">
+                        <a href="./who-we-are"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
                                     Who&nbsp;We&nbsp;Are
                             </span>
@@ -574,7 +574,7 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/ourapproach"  alt="Company" style="color: unset;">
+                        <a href="./ourapproach"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
                                    Our&nbsp;Approach
                             </span>
@@ -587,7 +587,7 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/opportunities"  alt="Opportunities" style="color: unset;">
+                        <a href="./opportunities"  alt="Opportunities" style="color: unset;">
                          <span class="fontLatoBold  footer_menu">
                                 Opportunities
                          </span>
@@ -718,12 +718,12 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="/privacy.html" style="color: #43434b;" class="pri" >
+                    <a href="./privacy.html" style="color: #43434b;" class="pri" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="/gdpr.html" style="color: #43434b;" class="pri1" >
+                    <a href="./gdpr.html" style="color: #43434b;" class="pri1" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
