--- a/contact.html
+++ b/contact.html
@@ -88,15 +88,15 @@
                             <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                            <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                            <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                            <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                            <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                             <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                             <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                                 <div class="dropdown">
                                     
                                     <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                     <a id="glossary" href="./glossary"> Glossary</a>
-                                    <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                    <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                                 </div>
                             </span>
@@ -133,8 +133,8 @@
                 <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
                 <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
-                <li  class="sub-menu"><a href="/glossary">Glossary</a></li>
-                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
+                <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
+                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
@@ -144,7 +144,7 @@
                 <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                     <li class="menu-item">
                         <a>
-                          <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                          <img src="/images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                         </a>
                     </li>
                 </ul>
@@ -176,13 +176,13 @@
                 <div class="row">
                     <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 logo_address">
                         <a href="/" alt="caryond" style="text-decoration: none;">
-                            <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                            <img alt="crayond@2x" src="/images/logo-crayond@2x.jpg" width="115px" />
                         </a>
                         <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                         <p class="fontGraphikRegular">All rights reserved</p>
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/who-we-are"  alt="Company" style="color: unset;">
+                        <a href="./who-we-are"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
                                     Who&nbsp;We&nbsp;Are
                             </span>
@@ -195,7 +195,7 @@
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/ourapproach"  alt="Company" style="color: unset;">
+                        <a href="./ourapproach"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
                                    Our&nbsp;Approach
                             </span>
@@ -208,7 +208,7 @@
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/opportunities"  alt="Opportunities" style="color: unset;">
+                        <a href="./opportunities"  alt="Opportunities" style="color: unset;">
                          <span class="fontLatoBold  footer_menu">
                                 Opportunities
                          </span>
@@ -233,7 +233,7 @@
                         </ul> -->
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                        <a href="/contact"  alt="contact" style="color: unset;">
+                        <a href="./contact"  alt="contact" style="color: unset;">
                          <span class="fontLatoBold footer_menu">
                                 Contact
                         </span>
@@ -286,12 +286,12 @@
                     >
                     <div class="col-lg-5 col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                         <div class="privacy col-xs-6">
-                            <a href="/privacy" style="color: #43434b;" class="pri" >
+                            <a href="./privacy" style="color: #43434b;" class="pri" >
                                 <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                             </a>
                         </div>
                         <div class="gdpr col-xs-6">
-                            <a href="/gdpr.html" style="color: #43434b;" class="pri" >
+                            <a href="./gdpr" style="color: #43434b;" class="pri" >
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                             </a>
                         </div>
@@ -339,12 +339,12 @@
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="/privacy.html" style="color: #43434b;" class="pri">
+                    <a href="./privacy" style="color: #43434b;" class="pri">
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="/gdpr.html" style="color: #43434b;" class="pri">
+                    <a href="./gdpr" style="color: #43434b;" class="pri">
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
