--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                        <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
