--- a/ourapproach.html
+++ b/ourapproach.html
@@ -54,7 +54,7 @@
     <link href="./plugin/aos.css" rel="stylesheet">
 
     <!-- css  -->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -114,15 +114,15 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                        <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
-                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
@@ -233,7 +233,7 @@
                 <div style="z-index: 1;" class="section_tap">
                     <samp class="team_icon">
                       <a href="#deploy_section" alt="deploy_section" style="width: 100%;display: flex;">
-                        <img src="./images/deploy.svg" alt="icons" />
+                        <img src="/images/deploy.svg" alt="icons" />
                       </a>
                     </samp>
                 <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Deploy</p>
