--- a/privacy.html
+++ b/privacy.html
@@ -92,15 +92,15 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
+                        <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
+                        <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="./products">Products</a><tag>NEW</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
-                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                <a id="saas-metrics" href="/saas-metrics/index" style="text-align: center !important;padding-left:
                                 10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
@@ -824,12 +824,12 @@
                 >
                 <div class="col-lg-5 col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                     <div class="privacy col-xs-6">
-                        <a href="/privacy" style="color: #43434b;" class="pri1" >
+                        <a href="./privacy" style="color: #43434b;" class="pri1" >
                             <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                         </a>
                     </div>
                     <div class="gdpr col-xs-6">
-                        <a href="/gdpr" style="color: #43434b;" class="pri" >
+                        <a href="./gdpr" style="color: #43434b;" class="pri" >
                             <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                         </a>
                     </div>
@@ -877,12 +877,12 @@
         <div class="container " >
             <div class="row response-xs" style="display: none;">
             <div class="privacy col-sm-6 col-xs-6">
-                <a href="/privacy.html" style="color: #43434b;" class="pri1" >
+                <a href="./privacy" style="color: #43434b;" class="pri1" >
                     <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                 </a>
             </div>
             <div class="gdpr col-sm-6 col-xs-6">
-                <a href="/gdpr.html" style="color: #43434b;" class="pri" >
+                <a href="./gdpr" style="color: #43434b;" class="pri" >
                     <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                 </a>
             </div>
